<resources>
    <string name="app_name">Penguin Stats</string>

    <string name="empty_blank" translatable="false"> </string>
    <string name="todo" translatable="false">TODO</string>
    <string name="minutes">Min</string>
    <string name="seconds">Sec</string>
    <string name="till_now">Till Now</string>

    <!-- Settings -->
    <string name="s_is_night">Enable night mode</string>
    <string name="s_is_mirror_site">Use .cn site</string>
    <string name="s_server">Default server</string>
    <string name="s_server_cn">CN</string>
    <string name="s_server_us">US</string>
    <string name="s_server_jp">JP</string>
    <string name="s_server_kr">KR</string>

    <!-- MainActivity -->
    <string name="nav_home">Home</string>
    <string name="nav_tool">Tool</string>
    <string name="nav_about">About</string>

    <!-- Fragment: Home -->
    <string name="home_refresh">Pull down to refresh the data</string>
    <string name="home_glance">A glance at global</string>
    <string name="home_glance_sanity">All sanity consumed</string>
    <string name="home_glance_reports">Total drop reports</string>
    <string name="home_glance_drops">Total item drop</string>
    <string name="home_drop">Drop Rates</string>
    <string name="home_drop_stage">By Stage</string>
    <string name="home_drop_item">By Item</string>
    <string name="home_report">Report Drops</string>
    <string name="home_report_stage">Select By Stage</string>
    <string name="home_report_reco">Recognition</string>
    <string name="home_web">Open in browser</string>
    <string name="home_web_loading">Loading…</string>

    <!-- Fragment: Tool -->
    <string name="tool_notice">Notice</string>
    <string name="tool_roguelike">Roguelike Stats</string>
    <string name="tool_farming_tool">Farming Tool</string>
    <string name="tool_advanced_query">Advanced Query</string>

    <!-- Fragment: About -->
    <string name="about_members">Members</string>
    <string name="about_changelog">Changelogs</string>
    <string name="about_links">Links</string>
    <string name="about_credit">Credit</string>
    <string name="about_settings">Settings</string>
    <string name="about_opensource">Open Source</string>
    <string name="about_privacy">Privacy</string>
    <string name="about_dev">Join Developing</string>
    <string name="about_donate">Donate us</string>
    <string name="about_contact">Contact us</string>
    <string name="about_content_license">Content License</string>

    <!--Page Zones&Items-->
    <string name="all">All</string>
    <string name="zone_event_opening">Event(Opening)</string>
    <string name="zone_main_theme">Main Theme</string>
    <string name="zone_intermezzi">Intermezzi&amp;Side Story</string>
    <string name="zone_event_closed">Event(Closed)</string>
    <string name="zone_supplies">Supplies</string>
    <string name="zone_recruit">Recruit</string>
    <string name="zone_gachabox">Gachabox</string>
    <string name="item_material">Material</string>
    <string name="item_card">Battle Record</string>
    <string name="item_chip">Chip</string>
    <string name="item_furniture">Furniture</string>
    <string name="item_activity">Activity Item</string>
    <string name="item_recruit">Recruit Tag</string>

    <!--Page Detailed-->
    <string name="detailed_sanity_consumed">Sanity consumed</string>
    <string name="detailed_clear_time">Min clear time</string>
    <string name="detailed_pattern_name">Drop pattern</string>
    <string name="detailed_pattern_interval">Statistical interval</string>
    <string name="detailed_pattern_sample">Sample count</string>
    <string name="detailed_link_prts">Wiki</string>
    <string name="detailed_link_map">Map</string>

    <!--Page Donate-->
    <string name="donate_text_a">Increasing number of users and server fees are putting Penguin Statistics into crisis. In order to protect our beloved Penguin Statistics, the webmaster decided to...</string>
    <string name="donate_text_b">The number of users is increasing. The server is becoming overwhelmed. We will appreciate it a lot if Doctors can donate some server fee . We greatly appreciate your support! </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">…</string>

</resources>