<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="18dp"
        android:text="@string/about_settings"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/Widget.AppCompat.Button.Borderless"
        app:drawableStartCompat="@drawable/icon_settings" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerInsetStart="18dp"
        app:dividerInsetEnd="18dp" />

    <TextView
        android:id="@+id/about_opensource"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="18dp"
        android:text="@string/about_opensource"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/Widget.AppCompat.Button.Borderless"
        app:drawableStartCompat="@drawable/icon_opensource" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerInsetStart="18dp"
        app:dividerInsetEnd="18dp" />

    <TextView
        android:id="@+id/about_privacy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="18dp"
        android:text="@string/about_privacy"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:theme="@style/Widget.AppCompat.Button.Borderless"
        app:drawableStartCompat="@drawable/icon_privacy" />


</LinearLayout>