<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.penguin_stats.android.ui.detailed.DetailedStageViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:baselineAligned="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/detailed_pattern_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="22dp"
                android:layout_gravity="center"
                android:textAppearance="@style/hint_text" />

            <TextView
                android:text="@{vm.interval}"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="2dp"
                android:layout_gravity="center"
                android:textAppearance="@style/smash_text" />

            <TextView
                android:text="@string/detailed_pattern_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="22dp"
                android:layout_gravity="center"
                android:textAppearance="@style/hint_text" />

            <TextView
                android:text="@{vm.count}"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="2dp"
                android:layout_gravity="center"
                android:textAppearance="@style/smash_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp">

                <TextView
                    android:text="@string/detailed_link_prts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textAlignment="viewEnd"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    app:drawableStartCompat="@drawable/baseline_open_in_new_24" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="1dp">

                <TextView
                    android:text="@string/detailed_link_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:textAlignment="viewEnd"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    app:drawableStartCompat="@drawable/baseline_open_in_new_24" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>
</layout>