<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white_p"
        app:strokeColor="@color/blue10"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        style="@style/Widget.Material3.CardView.Elevated">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/home_report"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@color/purple20"
                android:paddingStart="16dp"
                android:gravity="center_vertical" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_report_stage"
                    android:text="@string/home_report_stage"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:drawablePadding="12dp"
                    android:gravity="center"
                    app:drawableTopCompat="@drawable/icon_select_stage" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    app:dividerColor="@color/blue10" />

                <TextView
                    android:id="@+id/home_report_reco"
                    android:text="@string/home_report_reco"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:gravity="center"
                    android:layout_margin="12dp"
                    android:drawablePadding="12dp"
                    app:drawableTopCompat="@drawable/icon_select_reco" />

            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>